--- a/index.html
+++ b/index.html
@@ -20,6 +20,123 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+
+      /* Mobile-responsive styles */
+      @media (max-width: 640px) {
+        /* Reduce main container padding on all screens */
+        #root > div {
+          padding: 20px !important;
+        }
+
+        /* Welcome screen heading */
+        #root > div > div > h1 {
+          font-size: 28px !important;
+        }
+
+        /* Welcome screen icon */
+        #root > div > div > svg {
+          width: 60px !important;
+          height: 60px !important;
+        }
+
+        /* Dashboard title */
+        #root > div > div > h1:first-of-type {
+          font-size: 24px !important;
+        }
+
+        /* Add Task screen headings */
+        #root > div > div > div > h2 {
+          font-size: 22px !important;
+          margin-bottom: 24px !important;
+        }
+
+        /* Reduce modal padding */
+        #root > div > div[style*="position: fixed"] {
+          padding: 20px !important;
+        }
+
+        /* Modal inner container */
+        #root > div > div[style*="position: fixed"] > div {
+          padding: 20px !important;
+          max-width: 100% !important;
+        }
+
+        /* Input fields */
+        input, textarea {
+          font-size: 16px !important;
+          padding: 16px !important;
+        }
+
+        /* Buttons */
+        button {
+          min-height: 44px !important;
+          font-size: 14px !important;
+        }
+
+        /* Task Summary Card - reduce padding */
+        #root > div > div > div[style*="maxWidth: '480px'"][style*="padding: '16px 20px'"] {
+          padding: 12px 16px !important;
+        }
+
+        /* Matrix and Legend grids - single column on mobile */
+        div[style*="gridTemplateColumns: '1fr 1fr'"] {
+          grid-template-columns: 1fr !important;
+        }
+
+        /* Icon buttons - increase touch target size */
+        button > svg {
+          width: 24px !important;
+          height: 24px !important;
+        }
+
+        /* Checkbox - larger touch target */
+        input[type="checkbox"] {
+          width: 32px !important;
+          height: 32px !important;
+        }
+
+        /* Stack header buttons vertically */
+        #root > div > div:first-child > div {
+          flex-direction: column !important;
+          align-items: stretch !important;
+        }
+
+        /* Archive button full width */
+        #root > div > div > div > button[style*="Archive"] {
+          width: 100% !important;
+        }
+
+        /* Daily Review Modal buttons - stack vertically */
+        div[style*="display: flex"][style*="gap: '12px'"] > button {
+          flex: 1 1 100% !important;
+          min-width: 100% !important;
+        }
+
+        /* Task card padding */
+        div[style*="padding: '16px'"] {
+          padding: 12px !important;
+        }
+
+        /* Reduce font sizes */
+        h1 {
+          font-size: 24px !important;
+        }
+
+        h2 {
+          font-size: 22px !important;
+        }
+
+        /* Option cards */
+        div[style*="padding: '20px'"] {
+          padding: 16px !important;
+        }
+
+        /* Footer buttons */
+        #root > div > div:last-child > button {
+          font-size: 16px !important;
+          padding: 14px 24px !important;
+        }
+      }
     </style>
   </head>
   <body>
