--- a/index.html
+++ b/index.html
@@ -106,10 +106,16 @@
           width: 100% !important;
         }
 
-        /* Daily Review Modal buttons - stack vertically */
-        div[style*="display: flex"][style*="gap: '12px'"] > button {
-          flex: 1 1 100% !important;
-          min-width: 100% !important;
+        /* Daily Review Modal task buttons - stack vertically on mobile */
+        div[style*="flexDirection: 'column'"] > div[style*="display: 'flex'"][style*="gap: '8px'"] {
+          flex-direction: column !important;
+          align-items: stretch !important;
+        }
+
+        div[style*="flexDirection: 'column'"] > div[style*="display: 'flex'"][style*="gap: '8px'"] > button {
+          width: 100% !important;
+          min-height: 48px !important;
+          padding: 12px 16px !important;
         }
 
         /* Task card padding */
