--- a/index.html
+++ b/index.html
@@ -142,6 +142,133 @@
           font-size: 16px !important;
           padding: 14px 24px !important;
         }
+
+        /* DASHBOARD MOBILE OPTIMIZATIONS */
+
+        /* Dashboard header - responsive stack layout */
+        .dashboard-header {
+          flex-direction: column !important;
+          align-items: flex-start !important;
+          gap: 16px !important;
+        }
+
+        .dashboard-header-left {
+          width: 100%;
+        }
+
+        /* Title and date in one row */
+        .dashboard-title-row {
+          display: flex !important;
+          justify-content: space-between !important;
+          align-items: baseline !important;
+          gap: 12px !important;
+          margin-bottom: 8px !important;
+        }
+
+        .dashboard-title-row h1 {
+          flex: 0 0 auto !important;
+          margin-bottom: 0 !important;
+        }
+
+        .dashboard-date {
+          flex: 0 0 auto !important;
+          margin-bottom: 0 !important;
+          white-space: nowrap !important;
+        }
+
+        /* Task count - badge row that wraps */
+        .dashboard-task-count {
+          display: flex !important;
+          flex-wrap: wrap !important;
+          gap: 8px !important;
+          margin-top: 0 !important;
+        }
+
+        .task-count-badge {
+          display: inline-block !important;
+          padding: 4px 10px !important;
+          background-color: rgba(255, 255, 255, 0.05) !important;
+          border-radius: 12px !important;
+          font-size: 12px !important;
+          white-space: nowrap !important;
+        }
+
+        /* Header buttons - 50/50 row */
+        .dashboard-header-buttons {
+          width: 100% !important;
+          display: grid !important;
+          grid-template-columns: 1fr 1fr !important;
+          gap: 8px !important;
+        }
+
+        .dashboard-header-buttons button {
+          width: 100% !important;
+          justify-content: center !important;
+          font-size: 12px !important;
+          padding: 12px 16px !important;
+        }
+
+        /* Toggle buttons - vertical stack */
+        .dashboard-toggles {
+          flex-direction: column !important;
+          gap: 8px !important;
+        }
+
+        .dashboard-toggles button {
+          width: 100% !important;
+          padding: 12px 16px !important;
+        }
+
+        /* TASK CARD MOBILE OPTIMIZATIONS */
+
+        /* Task card - stacked layout */
+        .task-card-content {
+          flex-wrap: wrap !important;
+          gap: 8px !important;
+        }
+
+        /* First row: rank, checkbox, name */
+        .task-rank {
+          order: 1 !important;
+          width: 32px !important;
+        }
+
+        .task-checkbox {
+          order: 2 !important;
+          width: 32px !important;
+          height: 32px !important;
+        }
+
+        .task-main {
+          order: 3 !important;
+          flex: 1 1 100% !important;
+          min-width: 100% !important;
+        }
+
+        /* Second row: score + actions */
+        .task-score {
+          order: 4 !important;
+          margin-left: auto !important;
+          min-height: 44px !important;
+          display: flex !important;
+          align-items: center !important;
+        }
+
+        .task-header-row {
+          flex-wrap: wrap !important;
+          gap: 8px !important;
+        }
+
+        .task-action-button {
+          min-width: 44px !important;
+          min-height: 44px !important;
+          padding: 8px !important;
+        }
+
+        .task-action-button svg {
+          width: 20px !important;
+          height: 20px !important;
+        }
       }
     </style>
   </head>
