--- a/index.html
+++ b/index.html
@@ -258,72 +258,69 @@
 
         /* TASK CARD MOBILE OPTIMIZATIONS */
 
-        /* Task card - two-row layout */
+        /* Convert task-card-content to CSS Grid for precise control */
         .task-card-content {
-          flex-wrap: wrap !important;
+          display: grid !important;
+          grid-template-columns: 24px 24px 1fr auto !important;
+          grid-template-rows: auto auto !important;
           gap: 8px !important;
-          align-items: flex-start !important;
+          align-items: start !important;
         }
 
-        /* First visual row: rank, checkbox, name */
+        /* Row 1: Rank, Checkbox, Task Name */
         .task-rank {
-          order: 1 !important;
+          grid-column: 1 !important;
+          grid-row: 1 !important;
           width: 24px !important;
           font-size: 13px !important;
-          flex-shrink: 0 !important;
+          text-align: center !important;
         }
 
         .task-checkbox {
-          order: 2 !important;
+          grid-column: 2 !important;
+          grid-row: 1 !important;
           width: 24px !important;
           height: 24px !important;
-          flex-shrink: 0 !important;
         }
 
         .task-main {
-          order: 3 !important;
-          flex: 1 1 100% !important;
+          grid-column: 3 / -1 !important;
+          grid-row: 1 / 3 !important;
           min-width: 0 !important;
         }
 
-        /* Convert task-header-row to CSS Grid for better control */
+        /* Row 2: Score badge */
+        .task-score {
+          grid-column: 4 !important;
+          grid-row: 2 !important;
+          min-height: 40px !important;
+          display: flex !important;
+          align-items: center !important;
+          justify-self: end !important;
+        }
+
+        /* task-header-row uses flex to layout its children horizontally */
         .task-header-row {
-          display: grid !important;
-          grid-template-columns: 1fr auto auto auto !important;
-          grid-template-rows: auto auto !important;
-          gap: 8px 6px !important;
+          display: flex !important;
+          flex-wrap: wrap !important;
+          gap: 8px !important;
           align-items: center !important;
         }
 
-        /* Task name takes full width on first row */
+        /* Task name styling */
         .task-header-row > span:first-child {
-          grid-column: 1 / -1 !important;
-          grid-row: 1 !important;
           font-size: 14px !important;
+          flex: 1 1 100% !important;
+          margin-bottom: 4px !important;
         }
 
-        /* Deadline badge on second row, first column */
+        /* Deadline badge - compact styling */
         .task-header-row > span:nth-child(2) {
-          grid-column: 1 !important;
-          grid-row: 2 !important;
           padding: 4px 8px !important;
           font-size: 11px !important;
-          justify-self: start !important;
         }
 
-        /* Edit button on second row, second column */
-        .task-header-row > button:nth-of-type(1) {
-          grid-column: 2 !important;
-          grid-row: 2 !important;
-        }
-
-        /* Delete button (or confirmation buttons) on second row, third column */
-        .task-header-row > button:nth-of-type(2),
-        .task-header-row > button:nth-of-type(2) ~ button {
-          grid-column: 3 / -1 !important;
-          grid-row: 2 !important;
-        }
-
+        /* Action buttons */
         .task-action-button {
           min-width: 40px !important;
           min-height: 40px !important;
@@ -336,14 +333,11 @@
           height: 18px !important;
         }
 
-        /* Score badge positioning */
-        .task-score {
-          order: 4 !important;
-          margin-left: auto !important;
-          min-height: 40px !important;
-          display: flex !important;
-          align-items: center !important;
-          align-self: flex-end !important;
+        /* Delete confirmation buttons */
+        .task-header-row > button:not(.task-action-button) {
+          padding: 6px 12px !important;
+          font-size: 12px !important;
+          min-height: 36px !important;
         }
       }
     </style>
