--- a/index.html
+++ b/index.html
@@ -318,40 +318,35 @@
           align-self: start !important;
         }
 
-        /* task-header-row - simple wrap layout */
+        /* task-header-row - flex with wrap for mobile */
         .task-header-row {
-          display: block !important;
+          display: flex !important;
+          flex-wrap: wrap !important;
+          gap: 6px !important;
+          align-items: center !important;
         }
 
-        /* Task name - full width block element */
-        .task-header-row > span[style*="fontSize: '16px'"],
-        .task-header-row > span[style*="font-size: 16px"] {
-          display: block !important;
+        /* Task name span - takes full width to force line break */
+        .task-header-row > span:first-of-type {
+          width: 100% !important;
           font-size: 14px !important;
-          margin-bottom: 8px !important;
+          flex: 0 0 100% !important;
         }
 
-        /* Second line container for deadline and buttons */
-        .task-header-row > span:not(:first-child),
-        .task-header-row > button {
-          display: inline-block !important;
-          vertical-align: middle !important;
-          margin-right: 8px !important;
-        }
-
-        /* Deadline badge - compact styling */
-        .task-header-row > span[style*="padding"] {
+        /* Deadline badge - compact on second line */
+        .task-header-row > div:first-of-type,
+        .task-header-row > span:nth-of-type(2) {
           padding: 4px 8px !important;
           font-size: 11px !important;
-          margin-right: 8px !important;
+          flex: 0 0 auto !important;
         }
 
-        /* Action buttons */
+        /* Action buttons - proper sizing */
         .task-action-button {
           min-width: 40px !important;
           min-height: 40px !important;
           padding: 8px !important;
-          margin-right: 6px !important;
+          flex: 0 0 auto !important;
         }
 
         .task-action-button svg {
@@ -364,7 +359,7 @@
           padding: 6px 12px !important;
           font-size: 12px !important;
           min-height: 36px !important;
-          margin-right: 6px !important;
+          flex: 0 0 auto !important;
         }
       }
     </style>
