--- a/index.html
+++ b/index.html
@@ -274,92 +274,68 @@
           padding: 12px 16px !important;
         }
 
-        /* TASK CARD MOBILE OPTIMIZATIONS */
+        /* MOBILE TASK CARD - REBUILT FROM SCRATCH */
 
-        /* Convert task-card-content to CSS Grid for precise control */
+        /* Simple 4-column grid for the card container */
         .task-card-content {
           display: grid !important;
-          grid-template-columns: 24px 24px 1fr auto !important;
+          grid-template-columns: auto auto 1fr auto !important;
           grid-template-rows: auto auto !important;
-          gap: 8px !important;
-          align-items: start !important;
+          column-gap: 8px !important;
+          row-gap: 8px !important;
         }
 
-        /* Row 1: Rank, Checkbox, Task Name */
+        /* Explicit grid positioning - no ambiguity */
         .task-rank {
           grid-column: 1 !important;
           grid-row: 1 !important;
-          width: 24px !important;
           font-size: 13px !important;
-          text-align: center !important;
         }
 
         .task-checkbox {
           grid-column: 2 !important;
           grid-row: 1 !important;
-          width: 24px !important;
-          height: 24px !important;
         }
 
         .task-main {
           grid-column: 3 !important;
           grid-row: 1 / 3 !important;
-          min-width: 0 !important;
         }
 
-        /* Score badge on row 1, same line as task name */
         .task-score {
           grid-column: 4 !important;
           grid-row: 1 !important;
-          min-height: 40px !important;
-          display: flex !important;
-          align-items: center !important;
-          justify-self: end !important;
           align-self: start !important;
         }
 
-        /* task-header-row - flex with wrap for mobile */
+        /* Inside task-main: simple block layout */
         .task-header-row {
-          display: flex !important;
-          flex-wrap: wrap !important;
-          gap: 6px !important;
-          align-items: center !important;
+          display: block !important;
         }
 
-        /* Task name span - takes full width to force line break */
-        .task-header-row > span:first-of-type {
-          width: 100% !important;
+        /* Task name - block element (takes full width) */
+        .task-header-row > span:first-child {
+          display: block !important;
           font-size: 14px !important;
-          flex: 0 0 100% !important;
+          margin-bottom: 8px !important;
         }
 
-        /* Deadline badge - compact on second line */
-        .task-header-row > div:first-of-type,
-        .task-header-row > span:nth-of-type(2) {
-          padding: 4px 8px !important;
-          font-size: 11px !important;
-          flex: 0 0 auto !important;
+        /* Everything else - inline */
+        .task-header-row > *:not(:first-child) {
+          display: inline-block !important;
+          vertical-align: middle !important;
+          margin-right: 6px !important;
         }
 
-        /* Action buttons - proper sizing */
+        /* Compact sizing for mobile */
         .task-action-button {
           min-width: 40px !important;
           min-height: 40px !important;
-          padding: 8px !important;
-          flex: 0 0 auto !important;
         }
 
         .task-action-button svg {
           width: 18px !important;
           height: 18px !important;
-        }
-
-        /* Delete confirmation buttons */
-        .task-header-row > button:not(.task-action-button) {
-          padding: 6px 12px !important;
-          font-size: 12px !important;
-          min-height: 36px !important;
-          flex: 0 0 auto !important;
         }
       }
     </style>
