--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       }
 
       /* Hide backdrop on desktop (optional - can show on both) */
-      @media (min-width: 641px) {
+      @media (min-width: 769px) {
         .menu-backdrop {
           display: none;
         }
       }
 
-      /* Mobile-responsive styles */
-      @media (max-width: 640px) {
+      /* Mobile-responsive styles - UPDATED BREAKPOINT */
+      @media (max-width: 768px) {
         /* Reduce main container padding on all screens */
         #root > div {
           padding: 20px !important;
