--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
         gap: 10px;
       }
 
+      /* Drag handle - desktop styles */
+      .drag-handle {
+        transition: opacity 0.2s ease;
+      }
+
+      .drag-handle:hover {
+        opacity: 1 !important;
+      }
+
+      .drag-handle:active {
+        cursor: grabbing !important;
+      }
+
       /* Hide backdrop on desktop (optional - can show on both) */
       @media (min-width: 769px) {
         .menu-backdrop {
@@ -276,55 +289,24 @@
 
         /* MOBILE TASK CARD - REBUILT FROM SCRATCH */
 
-        /* Simple 4-column grid for the card container */
-        .task-card-content {
-          display: grid !important;
-          grid-template-columns: auto auto 1fr auto !important;
-          grid-template-rows: auto auto !important;
-          column-gap: 8px !important;
-          row-gap: 8px !important;
+        /* Mobile grid is now handled inline in the component */
+        /* No need for grid positioning overrides on mobile */
+
+        /* Drag handle styling for mobile */
+        .drag-handle {
+          min-width: 32px !important;
+          min-height: 44px !important;
+          padding: 8px !important;
+          opacity: 0.8 !important;
         }
 
-        /* Explicit grid positioning - no ambiguity */
-        .task-rank {
-          grid-column: 1 !important;
-          grid-row: 1 !important;
-          font-size: 13px !important;
+        .drag-handle:active {
+          opacity: 1 !important;
         }
 
-        .task-checkbox {
-          grid-column: 2 !important;
-          grid-row: 1 !important;
-        }
-
-        .task-main {
-          grid-column: 3 !important;
-          grid-row: 1 / 3 !important;
-        }
-
-        .task-score {
-          grid-column: 4 !important;
-          grid-row: 1 !important;
-          align-self: start !important;
-        }
-
-        /* Inside task-main: simple block layout */
-        .task-header-row {
-          display: block !important;
-        }
-
-        /* Task name - block element (takes full width) */
-        .task-header-row > span:first-child {
-          display: block !important;
-          font-size: 14px !important;
-          margin-bottom: 8px !important;
-        }
-
-        /* Everything else - inline */
-        .task-header-row > *:not(:first-child) {
-          display: inline-block !important;
-          vertical-align: middle !important;
-          margin-right: 6px !important;
+        .drag-handle svg {
+          width: 18px !important;
+          height: 18px !important;
         }
 
         /* Compact sizing for mobile */
@@ -336,36 +318,6 @@
         .task-action-button svg {
           width: 18px !important;
           height: 18px !important;
-        }
-
-        /* Reset button - ensure it's visible and touchable on mobile */
-        .task-header-row > button[title="Reset to calculated tier"] {
-          display: inline-flex !important;
-          align-items: center !important;
-          justify-content: center !important;
-          min-width: 32px !important;
-          min-height: 32px !important;
-          padding: 6px !important;
-        }
-
-        .task-header-row > button[title="Reset to calculated tier"] svg {
-          width: 16px !important;
-          height: 16px !important;
-        }
-
-        /* Drag handle - improve mobile touch experience */
-        .task-card-content {
-          cursor: grab !important;
-          touch-action: none !important;
-        }
-
-        .task-card-content:active {
-          cursor: grabbing !important;
-        }
-
-        /* Ensure dragged tasks have proper opacity on mobile */
-        [style*="opacity: 0.5"] {
-          opacity: 0.5 !important;
         }
 
         /* Manual tier indicator - make dashed border more visible on mobile */
